--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="s-img">
-            <img src="img/me-4.jpg">
+            <img src="img/me-1.jpg">
         </div>
     </div>
 
@@ -142,8 +142,8 @@
         <img src="img/assistent/8.jpg">
     </div>
 
-    <div class="footer so-row">
-        <div class="foo-cont">
+    <footer>
+        <div class="foo-top-cont">
             <div class="foo-desc">
                 <h1><span lang="en">Have a project in mind?<br><span style="color: #fff;">contact me ↴</span></span>
                     <span lang="ru">Хотите создать проект?<br><span style="color: #fff;">напишите мне ↴</span></span></h1>
@@ -165,18 +165,17 @@
                 </div>
 
                 <div class="foo-text">
-                    <p><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-desk"><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-mob"><span lang="en">Developed and Designed</span><span lang="ru">Разработка и дизайн</span></p>
                     <div  class="foo-links">
                         <a href="/about">Marina Orlova</a>
                     </div>
                 </div>
             </div>
-            
-            <div class="copyright">
-                <h1>© 2024</h1>
-            </div>
         </div>
-    </div>
+        
+        <h1 class="copyright">© 2024</h1>
+    </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
 
