mobile projects updated

--- a/assistent.html
+++ b/assistent.html
@@ -58,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/medeq" style="color: #fff;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/medeq" style="color: #fff;">➔</a>
         </div>
     </div>
