--- a/borosa.html
+++ b/borosa.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #ffffff;">
         <div class="case-d-text">
-            <h2><span lang="en">Borosa Web Design and Development</span><span lang="ru">Сайт для архитектурного бюро "BOROSA"</span></h2>
+            <h2><span lang="en">Borosa</span><span lang="ru">BOROSA</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p>UI/UX,<br><span lang="en">Development</span><span lang="ru">Разработка</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2022</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/aes" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/aes" style="color: #ffffff;">➔</a>
         </div>
     </div>
