--- a/kauris-guideline.html
+++ b/kauris-guideline.html
@@ -38,7 +38,7 @@
 
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">KAURIS WOMEN CLOTHING</span><span lang="ru">KAURIS</span></h2>
+            <h2><span lang="en">KAURIS</span><span lang="ru">KAURIS</span></h2>
             <div class="case-d-text-all">            
                 <div class="case-d-desc-area">
                     <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
@@ -58,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/assistent" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/assistent" style="color: #000000;">➔</a>
         </div>
     </div>
