--- a/medeq.html
+++ b/medeq.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Medeq Beauty <br>Catalog Design</span><span lang="ru">Каталог для <br>Medeq Beauty</span></h2>
+            <h2><span lang="en">Medeq Beauty</span><span lang="ru">Medeq Beauty</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p><span lang="en">Catalog</span><span lang="ru">Каталоги</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2023</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/fanci" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/fanci" style="color: #000000;">➔</a>
         </div>
     </div>
