--- a/overwave.html
+++ b/overwave.html
@@ -38,8 +38,13 @@
 
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Overwave Brand Guidelines</span><span lang="ru">Гайдлайн для студии Overwave</span></h2>
+            <h2><span lang="en">Overwave</span><span lang="ru">Overwave</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p><span lang="en">Branding</span><span lang="ru">Брендинг</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2022</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/borosa" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/borosa" style="color: #000000;">➔</a>
         </div>
     </div>
