--- a/a1.html
+++ b/a1.html
@@ -59,6 +59,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/sharing" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/sharing" style="color: #000000;">➔</a>
         </div>
     </div>
