--- a/aes.html
+++ b/aes.html
@@ -34,8 +34,13 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">American Express Shop Design</span><span lang="ru">Интернет-магазин <br>American Express Shop</span></h2>
+            <h2><span lang="en">American Express Shop</span><span lang="ru">American Express Shop</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p>UI/UX</p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2022</p>
@@ -49,6 +54,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/babka" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/babka" style="color: #000000;">➔</a>
         </div>
     </div>
