--- a/babka.html
+++ b/babka.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Babka Bakery <br>Branding</span><span lang="ru">Гайдлайн для пекарни <br>Babka Bakery</span></h2>
+            <h2><span lang="en">Babka Bakery</span><span lang="ru">Babka Bakery</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p><span lang="en">Branding</span><span lang="ru">Брендинг</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2021</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/otoplenych" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/otoplenych" style="color: #000000;">➔</a>
         </div>
     </div>
