--- a/cls-web.html
+++ b/cls-web.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #fff;">
         <div class="case-d-text">
-            <h2><span lang="en">Coleman Legal Services Web Design</span><span lang="ru">Веб-дизайн для Coleman Legal Services</span></h2>
+            <h2><span lang="en">Coleman Legal Services</span><span lang="ru">Coleman Legal Services</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p>UI/UX</p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2023</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/kauris-web" style="color: #fff;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/kauris-web" style="color: #fff;">➔</a>
         </div>
     </div>
