--- a/kauris-catalog.html
+++ b/kauris-catalog.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #ffffff;">
         <div class="case-d-text">
-            <h2><span lang="en">Kauris Fashion Catalog</span><span lang="ru">Каталог женской одежды для магазина "Kauris"</span></h2>
+            <h2><span lang="en">Kauris</span><span lang="ru">Kauris</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p><span lang="en">Catalog</span><span lang="ru">Каталоги</span></p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2024</p>
@@ -53,6 +58,7 @@
         </div>
 
         <div class="prevnext">
+            <a href="/kauris-guideline" style="color: #ffffff;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/kauris-guideline" style="color: #ffffff;">➔</a>
         </div>
     </div>
