--- a/silknwool.html
+++ b/silknwool.html
@@ -38,8 +38,13 @@
     
     <div class="case-d so-row" style="color: #000000;">
         <div class="case-d-text">
-            <h2><span lang="en">Silk&Wool Website Re-Design</span><span lang="ru">Редизайн для магазина ковров "Шерсть и Шёлк"</span></h2>
+            <h2><span lang="en">Silk&Wool</span><span lang="ru">Шерсть и Шёлк</span></h2>
             <div class="case-d-text-all">
+                <div class="case-d-desc-area">
+                    <h3><span lang="en">area</span><span lang="ru">раздел</span></h3>
+                    <p>UI/UX</p>
+                </div>
+
                 <div class="case-d-desc-y">
                     <h3><span lang="en">year</span><span lang="ru">год</span></h3>
                     <p>2023</p>
@@ -47,12 +52,13 @@
 
                 <div class="case-d-desc">
                     <h3><span lang="en">about project</span><span lang="ru">описание</span></h3>
-                    <p><span lang="en">Redesign for the Wool and Silk carpets website. The website is availible via link, and the pre-redesign version can be viewed at the bottom of this page.</span><span lang="ru">Редизайн интернет-магазина ковров "Шерсть и Шелк" реализован в современном стиле с упором на качественные фото. Вебсайт доступен по ссылке, а версию до редизайна можно посмотреть внизу этой страницы.</span></p>
+                    <p><span lang="en">Redesign for the Silk and Wool carpets website. The website is availible via link, and the pre-redesign version can be viewed at the bottom of this page.</span><span lang="ru">Редизайн интернет-магазина ковров "Шерсть и Шелк" реализован в современном стиле с упором на качественные фото. Вебсайт доступен по ссылке, а версию до редизайна можно посмотреть внизу этой страницы.</span></p>
                 </div>
             </div>
         </div>
 
         <div class="prevnext">
+            <a href="/pinoli" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/pinoli" style="color: #000000;">➔</a>
         </div>
     </div>
