mobile projects updated

--- a/avansbox.html
+++ b/avansbox.html
@@ -102,10 +102,16 @@
                         <a href="/about">Marina Orlova</a>
                     </div>
                 </div>
+
+                <div class="foo-text foo-links-mob">
+                    <a href="https://www.behance.net/yarova0mar0675"><img src="img/behance.svg"></a>
+                    <a href="https://www.instagram.com/_mari_rina_?igsh=MXhzazkweWdxdDZrMw%3D%3D&utm_source=qr"><img src="img/inst.svg"></a>
+                </div>
             </div>
         </div>
         
         <h1 class="copyright">© 2024</h1>
+        <p class="copyright-mob">© 2024 MARIDMI</p>
     </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
