--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
             <div class="more-works-card" data-aos="fade-up">
                 <a href="/silknwool">
                     <img id="img1" src="img/silkwool/00.jpg">
-                    <!-- <img class="img-h-1" src="img/silkwool/4.jpg"> -->
                 </a>
                 <div class="more-works-text">
                     <a href="/silknwool"><span lang="en">Silk and Wool Web Design</span><span lang="ru">Веб-дизайн для магазина Шерсть и Шелк</span></a>
@@ -112,7 +111,6 @@
             <div class="more-works-card" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
                 <a href="/assistent">
                     <img id="img2" src="img/assistent/7.jpg">
-                    <!-- <img class="img-h-2" src="img/assistent/4.jpg"> -->
                 </a>
                 <div class="more-works-text">
                     <a href="/assistent"><span lang="en">Assistent Plus Web Design</span><span lang="ru">Веб-дизайн для компании Ассистент Плюс</span></a>
@@ -125,7 +123,7 @@
     <div class="explore-more so-row">
         <div class="explore-anno" data-aos="fade-up">
             <p><span lang="en">EXPLORE MORE</span><span lang="ru">БОЛЬШЕ РАБОТ</span></p> 
-            <a href="/work"><span lang="en">VIEW ALL CASES <span style="font-size: 28px;">↴</span></span><span lang="ru">СМОТРЕТЬ ВСЕ <span style="font-size: 28px;">↴</span></span></a>
+            <a href="/work"><span lang="en">VIEW ALL CASES <span style="font-size: 28px;" class="mob-none">↴</span></span><span lang="ru">СМОТРЕТЬ ВСЕ <span style="font-size: 28px;" class="mob-none">↴</span></span></a>
         </div>
 
         <div class="explore-cont" data-aos="fade-up">
@@ -194,10 +192,16 @@
                         <a href="/about">Marina Orlova</a>
                     </div>
                 </div>
+
+                <div class="foo-text foo-links-mob">
+                    <a href="https://www.behance.net/yarova0mar0675"><img src="img/behance.svg"></a>
+                    <a href="https://www.instagram.com/_mari_rina_?igsh=MXhzazkweWdxdDZrMw%3D%3D&utm_source=qr"><img src="img/inst.svg"></a>
+                </div>
             </div>
         </div>
         
         <h1 class="copyright">© 2024</h1>
+        <p class="copyright-mob">© 2024 MARIDMI</p>
     </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
