--- a/pinoli.html
+++ b/pinoli.html
@@ -75,8 +75,8 @@
         <img src="img/pinoli/7.jpg">
     </div>
 
-    <div class="footer so-row">
-        <div class="foo-cont">
+    <footer>
+        <div class="foo-top-cont">
             <div class="foo-desc">
                 <h1><span lang="en">Have a project in mind?<br><span style="color: #fff;">contact me ↴</span></span>
                     <span lang="ru">Хотите создать проект?<br><span style="color: #fff;">напишите мне ↴</span></span></h1>
@@ -98,18 +98,23 @@
                 </div>
 
                 <div class="foo-text">
-                    <p><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-desk"><span lang="en">Developed<br>and Designed</span><span lang="ru">Разработка<br>и дизайн</span></p>
+                    <p class="foo-mob"><span lang="en">Developed and Designed</span><span lang="ru">Разработка и дизайн</span></p>
                     <div  class="foo-links">
                         <a href="/about">Marina Orlova</a>
                     </div>
                 </div>
-            </div>
-            
-            <div class="copyright">
-                <h1>© 2024</h1>
+
+                <div class="foo-text foo-links-mob">
+                    <a href="https://www.behance.net/yarova0mar0675"><img src="img/behance.svg"></a>
+                    <a href="https://www.instagram.com/_mari_rina_?igsh=MXhzazkweWdxdDZrMw%3D%3D&utm_source=qr"><img src="img/inst.svg"></a>
+                </div>
             </div>
         </div>
-    </div>
+        
+        <h1 class="copyright">© 2024</h1>
+        <p class="copyright-mob">© 2024 MARIDMI</p>
+    </footer>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><img src="img/arrow-top.png"></button>
 
