mobile projects updated

--- a/borosa.html
+++ b/borosa.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="prevnext">
-            <a href="/aes" style="color: #000000;" class="prev-mob">Следующий проект &nbsp;</a>
+            <a href="/aes" style="color: #ffffff;" class="prev-mob">Следующий проект &nbsp;</a>
             <a href="/aes" style="color: #ffffff;">➔</a>
         </div>
     </div>
